# text-sentiment-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample_reviews.csv
src/sentiment_analyzer/: __init__.py  analyzer.py  cli.py  preprocessor.py
src/sentiment_analyzer/backends/: __init__.py  base.py  transformers.py
tests/: __init__.py  test_analyzer.py  test_preprocessor.py
