[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment_analyzer"
version = "0.1.0"
description = "General-purpose text sentiment analysis and NLP classification pipeline in Python."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tiktoken",
    "sentencepiece",
    "protobuf"
]

[project.scripts]
sentiment-analyzer = "sentiment_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
